# syncthing-hs

./: .travis.yml  LICENSE  README.md  changelog.md  hpulse.cabal  syncthing-hs.cabal  tutorial.md
Network/: Syncthing.hs
Network/Syncthing/: Get.hs  Internal.hs  Post.hs  Session.hs  Types.hs  Utils.hs
Network/Syncthing/Internal/: Config.hs  Error.hs  Lens.hs  Monad.hs  Request.hs  Types.hs  Utils.hs
Network/Syncthing/Internal/Types/: CacheEntry.hs  Common.hs  Completion.hs  Config.hs  Connection.hs  DeviceId.hs  Error.hs  Ignore.hs  Model.hs  Need.hs  Ping.hs  Sync.hs  System.hs  SystemMsg.hs  Upgrade.hs  Version.hs
Network/Syncthing/Types/: CacheEntry.hs  Common.hs  Completion.hs  Config.hs  Connection.hs  DBFile.hs  DeviceId.hs  DeviceInfo.hs  DirTree.hs  Error.hs  FileInfo.hs  FolderInfo.hs  Ignore.hs  Model.hs  Need.hs  Sync.hs  System.hs  SystemMsg.hs  Upgrade.hs  UsageReport.hs  Version.hs
src/: Pulse.hs
src/Network/: Pulse.hs  Syncthing.hs
src/Network/Pulse/: Get.hs  Lens.hs  Post.hs  Query.hs  Session.hs  Types.hs
src/Network/Pulse/Common/: Ping.hs
src/Network/Pulse/Get/: Ping.hs  Sync.hs  Version.hs
src/Network/Pulse/Internal/: Query.hs
src/Network/Pulse/Post/: Ping.hs
src/Network/Syncthing/: Get.hs  Lens.hs  Post.hs  Query.hs  Session.hs  Types.hs  Utils.hs
src/Network/Syncthing/Common/: Config.hs  Ignores.hs  Need.hs  Ping.hs  Types.hs
src/Network/Syncthing/Get/: Completion.hs  Connections.hs  DeviceId.hs  Discovery.hs  Errors.hs  Ignores.hs  Model.hs  Need.hs  Ping.hs  Sync.hs  System.hs  Upgrade.hs  Version.hs
src/Network/Syncthing/Internal/: Query.hs  Types.hs  Utils.hs
src/Network/Syncthing/Post/: Bump.hs  Discovery.hs  Error.hs  Ignores.hs  Ping.hs  Scan.hs  System.hs
src/Network/Syncthing/Types/: CacheEntry.hs  Common.hs  Config.hs  Connection.hs  DeviceId.hs  Error.hs  Ignore.hs  Ignores.hs  Model.hs  Need.hs  Ping.hs  System.hs  SystemMsg.hs  Upgrade.hs  Version.hs
tests/: Test.hs
tests/Properties/: ErrorProperties.hs  JsonArbitrary.hs  JsonInstances.hs  JsonProperties.hs
tests/SyncthingTest/: Arbitrary.hs  ErrorProperties.hs  JSONArbitrary.hs  JSONInstances.hs  JSONProperties.hs  JsonArbitrary.hs  JsonInstances.hs  JsonProperties.hs
tests/UnitTests/: Errors.hs  Requests.hs
