name:                syncthing-hs
version:             0.1.0.0
synopsis:            Haskell bindings for the Syncthing REST API
description:         
    .
    see: <https://github.com/syncthing/syncthing/wiki/REST-Interface>
homepage:            https://github.com/jetho/syncthing-hs
license:             BSD3
license-file:        LICENSE
author:              Jens Thomas
maintainer:          jetho@gmx.de
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -Wall -fno-warn-orphans
  exposed-modules:   Network.Syncthing    
                     Network.Syncthing.Session
                     Network.Syncthing.Get
                     Network.Syncthing.Post
                     Network.Syncthing.Types
  other-modules:     Network.Syncthing.Internal.Types
                     Network.Syncthing.Internal.Query
                     Network.Syncthing.Internal.Lens
                     Network.Syncthing.Utils
                     Network.Syncthing.Common.Types
                     Network.Syncthing.Common.Ignores
                     Network.Syncthing.Common.Need
                     Network.Syncthing.Common.Ping
                     Network.Syncthing.Get.Completion
                     Network.Syncthing.Get.Connections
                     Network.Syncthing.Get.Discovery
                     Network.Syncthing.Get.DeviceId
                     Network.Syncthing.Get.Errors
                     Network.Syncthing.Get.Ignores
                     Network.Syncthing.Get.Model
                     Network.Syncthing.Get.Need
                     Network.Syncthing.Get.Ping
                     Network.Syncthing.Get.Sync
                     Network.Syncthing.Get.System
                     Network.Syncthing.Get.Upgrade
                     Network.Syncthing.Get.Version
                     Network.Syncthing.Post.Bump
                     Network.Syncthing.Post.Discovery
                     Network.Syncthing.Post.Error
                     Network.Syncthing.Post.Ignores
                     Network.Syncthing.Post.Ping
                     Network.Syncthing.Post.Scan
                     Network.Syncthing.Post.System
  -- other-extensions:    
  hs-source-dirs:    src
  build-depends:       aeson >=0.8.0.1
                     , base >=4.5 && <5
                     , bytestring >=0.9
                     , connection >= 0.2.3
                     , containers >= 0.5.5.1
                     , either >=4.3.1
                     , http-client >=0.3.1.1
                     , http-client-tls >=0.2
                     , lens >=4.5 
                     , old-locale >= 1.0.0.6
                     , regex-posix >= 0.95.2
                     , text >=1.2.0.0
                     , time >= 1.4.2
                     , transformers >=0.3.0.0
                     , unordered-containers >= 0.2.5.1
                     , wreq >=0.3.0.0
  -- hs-source-dirs:      
  default-language:    Haskell2010
