name:                syncthing-hs
version:             0.1.0.0
synopsis:            Haskell bindings for the Syncthing REST API
description:         
    .
    see: <https://github.com/syncthing/syncthing/wiki/REST-Interface>
homepage:            https://github.com/jetho/syncthing-hs
license:             BSD3
license-file:        LICENSE
author:              Jens Thomas
maintainer:          jetho@gmx.de
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -Wall -fno-warn-orphans
  exposed-modules:   Network.Syncthing    
                     Network.Syncthing.Session
                     Network.Syncthing.Get
                     Network.Syncthing.Post
                     Network.Syncthing.Internal.Config
                     Network.Syncthing.Internal.Error
                     Network.Syncthing.Internal.Monad
                     Network.Syncthing.Internal.Request
                     Network.Syncthing.Internal.Types
                     Network.Syncthing.Internal.Utils
  other-modules:     Network.Syncthing.Internal.Lens
                     Network.Syncthing.Internal.Types.CacheEntry
                     Network.Syncthing.Internal.Types.Common
                     Network.Syncthing.Internal.Types.Completion
                     Network.Syncthing.Internal.Types.Config
                     Network.Syncthing.Internal.Types.Connection
                     Network.Syncthing.Internal.Types.DeviceId
                     Network.Syncthing.Internal.Types.Error
                     Network.Syncthing.Internal.Types.Ignore
                     Network.Syncthing.Internal.Types.Model
                     Network.Syncthing.Internal.Types.Need
                     Network.Syncthing.Internal.Types.Ping
                     Network.Syncthing.Internal.Types.Sync
                     Network.Syncthing.Internal.Types.System
                     Network.Syncthing.Internal.Types.SystemMsg
                     Network.Syncthing.Internal.Types.Upgrade
                     Network.Syncthing.Internal.Types.Version
  -- other-extensions:    
  build-depends:       aeson >=0.8.0.1
                     , base >=4.5 && <5
                     , bytestring >=0.9
                     , connection >= 0.2.3
                     , containers >= 0.5.5.1
                     , either >=4.3.1
                     , http-client >=0.3.1.1
                     , http-client-tls >=0.2
                     , lens >=4.5 
                     , old-locale >= 1.0.0.6
                     , regex-posix >= 0.95.2
                     , text >=1.2.0.0
                     , time >= 1.4.2
                     , transformers >=0.3.0.0
                     , unordered-containers >= 0.2.5.1
                     , wreq >=0.3.0.0
  -- hs-source-dirs:    
  default-language:    Haskell2010

test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       aeson >=0.8.0.1
                     , base >=4.5 && <5
                     , derive
                     , quickcheck-instances
                     , syncthing-hs
                     , tasty
                     , tasty-quickcheck
                     , text >=1.2.0.0
  hs-source-dirs:      tests
  default-language:    Haskell2010

